--- a/test/OutputCacheProviderFunctionalTests/RedisOutputCacheProvider.FunctionalTests.csproj
+++ b/test/OutputCacheProviderFunctionalTests/RedisOutputCacheProvider.FunctionalTests.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Microsoft.AspNet.OutputCache.OutputCacheModuleAsync" Version="1.0.2" />
     <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="6.0.0" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="StackExchange.Redis" Version="2.6.96" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
     <PackageReference Include="System.Diagnostics.PerformanceCounter" Version="6.0.1" />
